src/objects/MX_SB_VTS_Beneficiario__c.object
<CustomObject>
    <fields>
        <fullName>MX_SB_SAC_CodigoPostal__c</fullName>
        <description>Campo para almacenar el código postal del asegurado, beneficiario o conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Código Postal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Colonia__c</fullName>
        <description>Campo para almacenar la colonia del beneficiario, asegurado o conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Colonia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Direccion__c</fullName>
        <description>Campo para almacenar la direccion del asegurado, beneficiario o conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Email__c</fullName>
        <description>Campo para almacenar el correo electrónico del asegurado, beneficiario o conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Correo Electrónico</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_EstadoRepublica__c</fullName>
        <description>Campo para almacenar el estado de la republica del asegurado, beneficiario o conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Estádo de la Republica</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_FechaNacimiento__c</fullName>
        <description>Campo para almacenar la fecha de nacimiento del asegurado, beneficiario o conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Genero__c</fullName>
        <description>Campo para almacenar el genero del asegurado, beneficiario o conductor</description>
        <label>Género</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Masculino</fullName>
                </value>
                <value>
                    <fullName>Femenino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Nacionalidad__c</fullName>
        <description>Campo para almacenar la nacionalidad del asegurado, beneficiario o conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nacionalidad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Poblacion__c</fullName>
        <description>Campo para almacenar la población del asegurado, beneficiario o conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Población</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Profesion__c</fullName>
        <description>Campo para alamacenar la profesión del asegurado, beneficiario o conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Profesión</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_RFC__c</fullName>
        <description>Campo para almacenar el RFC del asegurado, beneficiario o conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RFC</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_TelefonoCelular__c</fullName>
        <description>Campo para almacenar el teléfono celular del asegurado, beneficiario o conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Teléfono Celular</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_TelefonoOficina__c</fullName>
        <description>Campo para almacenar el teléfono de oficina del asegurado, beneficiario o conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Teléfono Oficina</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_AMaterno_Beneficiario__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Apellido Materno del Beneficiario</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_APaterno_Beneficiario__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Apellido Paterno del Beneficiario</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Contracts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contrato</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Beneficiarios</relationshipLabel>
        <relationshipName>Beneficiarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Parentesco__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parentesco</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Porcentaje__c</fullName>
        <label>Porcentaje</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cotización</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Beneficiarios</relationshipLabel>
        <relationshipName>Beneficiarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Homoclave__c</fullName>
        <description>Homoclave de Beneficiario en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Homoclave</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Beneficiario</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Beneficiario</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beneficiarios</pluralLabel>
    <recordTypes>
        <fullName>MX_SB_SAC_RTAsegurado</fullName>
        <active>true</active>
        <description>RecordType para los registros de asegurado</description>
        <label>Asegurado</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_SB_SAC_RTBeneficiario</fullName>
        <active>true</active>
        <description>RecordType para los registros de Beneficiario</description>
        <label>Beneficiario</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_SB_SAC_RTConductor</fullName>
        <active>true</active>
        <description>RecordType para ls registros de conductor</description>
        <label>Conductor</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>